single api single download is working

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
-# packsge lock
+# package lock
 package-lock.json
+# down folder
+/downloads
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
