multi downloading handles errorrs more gracefully and also logs them :>

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+errorDownload.txt
+errorFetch.txt
 
 # package lock
 package-lock.json
