--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/nxdun/TeraboxBulkDownloader#readme",
   "dependencies": {
+    "archiver": "^7.0.1",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
