less error prone downloads, reinforeced error handler

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ errorFetch.txt
 package-lock.json
 # down folder
 /downloads
+.mp4
+.mkv
+.jpg
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
