--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ package-lock.json
 .mkv
 .jpg
 temp
+url.txt
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
