--- a/.github/workflows/node.js.build.check.yml
+++ b/.github/workflows/node.js.build.check.yml
@@ -25,5 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: npm install
     - run: npm start
+
 
