--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,8 @@ temp
 url.txt
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
+# package lock
+package-lock.json
 # Runtime data
 pids
 *.pid
